// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VmTemplateDetails /> renders container correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Template Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="myproject-container-template-cloud-init-name"
        >
          container-template-cloud-init
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-template-details__description"
          >
            <div
              id="myproject-container-template-cloud-init-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Operating System
            </dt>
            <dd
              id="myproject-container-template-cloud-init-os"
            >
              Fedora 29
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="myproject-container-template-cloud-init-workload-profile"
            >
              generic
            </dd>
            <dt>
              Base Template
            </dt>
            <dd
              id="myproject-container-template-cloud-init-base-template"
            >
              default/fedora-generic
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              Source
            </dt>
            <dd>
              <div
                class=""
                id="myproject-container-template-cloud-init-type"
                title="fooContainer"
              >
                Container
              </div>
              <div
                class="kubevirt-template-source__source"
                id="myproject-container-template-cloud-init-source"
              >
                fooContainer
              </div>
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="myproject-container-template-cloud-init-namespace"
            >
              myproject
            </dd>
            <dd>
              myproject
            </dd>
            <dt>
              Boot Order
            </dt>
            <dd>
              <ol
                class="kubevirt-boot-order__list"
              >
                <li>
                  rootdisk
                </li>
              </ol>
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="myproject-container-template-cloud-init-flavor"
                >
                  small
                </div>
                <div
                  id="myproject-container-template-cloud-init-flavor-description"
                >
                  2 CPU, 2G Memory
                </div>
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmTemplateDetails /> renders pxe correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Template Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="myproject-pxe-template-dv-name"
        >
          pxe-template-dv
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-template-details__description"
          >
            <div
              id="myproject-pxe-template-dv-description"
            >
              ---
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Operating System
            </dt>
            <dd
              id="myproject-pxe-template-dv-os"
            >
              Fedora 29
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="myproject-pxe-template-dv-workload-profile"
            >
              generic
            </dd>
            <dt>
              Base Template
            </dt>
            <dd
              id="myproject-pxe-template-dv-base-template"
            >
              default/fedora-generic
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              Source
            </dt>
            <dd>
              <div
                class=""
                id="myproject-pxe-template-dv-type"
              >
                PXE
              </div>
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="myproject-pxe-template-dv-namespace"
            >
              myproject
            </dd>
            <dd>
              myproject
            </dd>
            <dt>
              Boot Order
            </dt>
            <dd>
              <ol
                class="kubevirt-boot-order__list"
              >
                <li>
                  eth1
                </li>
                <li>
                  fooDvDisk
                </li>
              </ol>
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="myproject-pxe-template-dv-flavor"
                >
                  small
                </div>
                <div
                  id="myproject-pxe-template-dv-flavor-description"
                >
                  2 CPU, 2G Memory
                </div>
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<VmTemplateDetails /> renders url correctly 1`] = `
<div
  class="co-m-pane__body"
>
  <h1
    class="co-m-pane__heading"
  >
    Virtual Machine Template Overview
    <div>
      <button
        class="btn btn-default"
        type="button"
      >
        Edit
      </button>
    </div>
  </h1>
  <div
    class="row"
  >
    <div
      class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
      id="name-description-column"
    >
      <dl>
        <dt>
          Name
        </dt>
        <dd
          id="myproject-url-template-name"
        >
          url-template
        </dd>
        <dt>
          Description
        </dt>
        <dd>
          <div
            class="kubevirt-vm-template-details__description"
          >
            <div
              id="myproject-url-template-description"
            >
              foo description
            </div>
          </div>
        </dd>
      </dl>
    </div>
    <div
      class="col-lg-8 col-md-8 col-sm-8 col-xs-8"
      id="details-column"
    >
      <div
        class="row"
      >
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-1"
        >
          <dl>
            <dt>
              Operating System
            </dt>
            <dd
              id="myproject-url-template-os"
            >
              Fedora 29
            </dd>
            <dt>
              Workload Profile
            </dt>
            <dd
              id="myproject-url-template-workload-profile"
            >
              generic
            </dd>
            <dt>
              Base Template
            </dt>
            <dd
              id="myproject-url-template-base-template"
            >
              default/fedora-generic
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-2"
        >
          <dl>
            <dt>
              Source
            </dt>
            <dd>
              <div
                class=""
                id="myproject-url-template-type"
                title="http://rock.mountain.all-images.cz/mirrors/there-was-a-toad/on/a/blue/happy/road/0.12.13/isos/x86_64/dromaeosauridae.iso?a=1&b=caaaaaaaaaaddddddddaaaaaaa#here"
              >
                URL
              </div>
              <div
                class="kubevirt-template-source__source"
                id="myproject-url-template-source"
              >
                <a
                  href="http://rock.mountain.all-images.cz/mirrors/there-was-a-toad/on/a/blue/happy/road/0.12.13/isos/x86_64/dromaeosauridae.iso?a=1&b=caaaaaaaaaaddddddddaaaaaaa#here"
                  title="http://rock.mountain.all-images.cz/mirrors/there-was-a-toad/on/a/blue/happy/road/0.12.13/isos/x86_64/dromaeosauridae.iso?a=1&b=caaaaaaaaaaddddddddaaaaaaa#here"
                >
                  …mountain.all-images.cz/…/dromaeosauridae.iso…
                </a>
              </div>
            </dd>
            <dt>
              Namespace
            </dt>
            <dd
              id="myproject-url-template-namespace"
            >
              myproject
            </dd>
            <dd>
              myproject
            </dd>
            <dt>
              Boot Order
            </dt>
            <dd>
              <ol
                class="kubevirt-boot-order__list"
              >
                <li>
                  rootdisk
                </li>
              </ol>
            </dd>
          </dl>
        </div>
        <div
          class="col-lg-4 col-md-4 col-sm-4 col-xs-4"
          id="details-column-3"
        >
          <dl>
            <dt>
              Flavor
            </dt>
            <dd>
              <div>
                <div
                  id="myproject-url-template-flavor"
                >
                  small
                </div>
                <div
                  id="myproject-url-template-flavor-description"
                >
                  2 CPU, 2G Memory
                </div>
              </div>
            </dd>
          </dl>
        </div>
      </div>
    </div>
  </div>
</div>
`;
